[package]
name = "safers"
description = "A client / shell for syspass API implemented in Rust"
version = "0.1.6"
authors = ["Martin GUILLOUX <martin.guilloux@protonmail.com>"]
edition = "2018"
repository = "https://github.com/Marthin-/safe.rs"
license = "GPL-3.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
syspass_api= "0.1.5"
rust-ini = "0.13.0"
serde_json = "1.0"
