[package]
name = "safers"
description = "A client / shell for syspass API implemented in Rust"
version = "0.1.6"
authors = ["Martin GUILLOUX <martin.guilloux@protonmail.com>"]
edition = "2018"
repository = "https://github.com/Marthin-/safe.rs"
license = "GPL-3.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
syspass_api= "0.1.7"
rust-ini = "0.13.0"
serde_json = "1.0"
rpassword = "4.0.3"
# syspass_api dependencies
# serde_json = "1.0"
reqwest = "0.9.22"
serde_derive = "1.0"
json = "0.12.0"
serde="1.0"
